force-app/main/default/objects/Loading_Advice__c/Loading_Advice__c.object-meta.xml
<CustomObject>
    <label>Loading Advice</label>
    <nameField>
        <displayFormat>{0000}/{DD}.{MM}.{YYYY}</displayFormat>
        <label>Loading Advice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loading Advice</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>