force-app/main/default/objects/Loading_Advice__c/fields/Account_DKL__c.field-meta.xml
<CustomField>
    <fullName>Account_DKL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Loading Advices</relationshipLabel>
    <relationshipName>Loading_Advices</relationshipName>
    <type>Lookup</type>
</CustomField>