force-app/main/default/objects/Loading_Advice__c/fields/Approval_Status_DKL__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status_DKL__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Not Submitted</fullName>
            </value>
            <value>
                <fullName>Pending 1st Approver</fullName>
            </value>
            <value>
                <fullName>Pending 2nd Approver</fullName>
            </value>
            <value>
                <fullName>Pending 3rd Approver</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <isActive>false</isActive>
                <label>Pending</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>