force-app/main/default/objects/Loading_Advice__c/fields/Comments_DKL__c.field-meta.xml
<CustomField>
    <fullName>Comments_DKL__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>