force-app/main/default/objects/Loading_Advice__c/fields/CurrentApprover_DKL__c.field-meta.xml
<CustomField>
    <fullName>CurrentApprover_DKL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CurrentApprovals</relationshipName>
    <type>Lookup</type>
</CustomField>