force-app/main/default/objects/Loading_Advice__c/fields/DeliveredlAmount_DKL__c.field-meta.xml
<CustomField>
    <fullName>DeliveredlAmount_DKL__c</fullName>
    <label>Delivered Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>