force-app/main/default/objects/Loading_Advice__c/fields/DeliveredQuantity_DKL__c.field-meta.xml
<CustomField>
    <fullName>DeliveredQuantity_DKL__c</fullName>
    <label>Delivered Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>