force-app/main/default/objects/Loading_Advice__c/fields/DispatchPDFContentDocumentId_DKL__c.field-meta.xml
<CustomField>
    <fullName>DispatchPDFContentDocumentId_DKL__c</fullName>
    <label>Dispatch PDF ContentDocumentId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>