force-app/main/default/objects/Loading_Advice__c/fields/DiversionReason_DKL__c.field-meta.xml
<CustomField>
    <fullName>DiversionReason_DKL__c</fullName>
    <label>Diversion Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>