force-app/main/default/objects/Loading_Advice__c/fields/DivertedFrom_DKL__c.field-meta.xml
<CustomField>
    <fullName>DivertedFrom_DKL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Diverted From</label>
    <referenceTo>Loading_Advice__c</referenceTo>
    <relationshipLabel>Loading Advices (Diverted From)</relationshipLabel>
    <relationshipName>Loading_Advices</relationshipName>
    <type>Lookup</type>
</CustomField>