force-app/main/default/objects/Loading_Advice__c/fields/DriverName_DKL__c.field-meta.xml
<CustomField>
    <fullName>DriverName_DKL__c</fullName>
    <label>Driver Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>