force-app/main/default/objects/Loading_Advice__c/fields/DriverPhoneNo_DKL__c.field-meta.xml
<CustomField>
    <fullName>DriverPhoneNo_DKL__c</fullName>
    <label>Driver Phone No</label>
    <type>Phone</type>
</CustomField>