force-app/main/default/objects/Loading_Advice__c/fields/FinanceApprovedBy_DKL__c.field-meta.xml
<CustomField>
    <fullName>FinanceApprovedBy_DKL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LoadingAdvicesFinanceApproval</relationshipName>
    <type>Lookup</type>
</CustomField>