force-app/main/default/objects/Loading_Advice__c/fields/FinanceApprovedOn_DKL__c.field-meta.xml
<CustomField>
    <fullName>FinanceApprovedOn_DKL__c</fullName>
    <label>Finance Approved On</label>
    <type>DateTime</type>
</CustomField>