force-app/main/default/objects/Loading_Advice__c/fields/LoadingAdviceNumber_DKL__c.field-meta.xml
<CustomField>
    <fullName>LoadingAdviceNumber_DKL__c</fullName>
    <label>Loading Advice Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>