force-app/main/default/objects/Loading_Advice__c/fields/LogisticsEmailSent_DKL__c.field-meta.xml
<CustomField>
    <fullName>LogisticsEmailSent_DKL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logistics Email Sent</label>
    <type>Checkbox</type>
</CustomField>