force-app/main/default/objects/Loading_Advice__c/fields/Opportunity_DKL__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_DKL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Loading Advices</relationshipLabel>
    <relationshipName>Loading_Advices</relationshipName>
    <type>Lookup</type>
</CustomField>