force-app/main/default/objects/Loading_Advice__c/fields/Order_DKL__c.field-meta.xml
<CustomField>
    <fullName>Order_DKL__c</fullName>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Loading Advices</relationshipLabel>
    <relationshipName>Loading_Advices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>