force-app/main/default/objects/Loading_Advice__c/fields/ProductFamily_DKL__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily_DKL__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bitumen 60/70</fullName>
            </value>
            <value>
                <fullName>Bituminous Emulsion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>