force-app/main/default/objects/Loading_Advice__c/fields/RevisedDocumentNeeded_DKL__c.field-meta.xml
<CustomField>
    <fullName>RevisedDocumentNeeded_DKL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Revised Document Needed</label>
    <type>Checkbox</type>
</CustomField>