force-app/main/default/objects/Loading_Advice__c/fields/RollUpQuantity_DKL__c.field-meta.xml
<CustomField>
    <fullName>RollUpQuantity_DKL__c</fullName>
    <label>Roll Up Quantity</label>
    <summarizedField>Loading_Advice_Line__c.ActualQuantity_DKL__c</summarizedField>
    <summaryForeignKey>Loading_Advice_Line__c.LoadingAdvice_DKL__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>