force-app/main/default/objects/Loading_Advice__c/fields/Status_DKL__c.field-meta.xml
<CustomField>
    <fullName>Status_DKL__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Diverted</fullName>
            </value>
            <value>
                <fullName>Superseded</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>