force-app/main/default/objects/Loading_Advice__c/fields/Submittedby_DKL__c.field-meta.xml
<CustomField>
    <fullName>Submittedby_DKL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SubmittedLoadingAdvices</relationshipName>
    <type>Lookup</type>
</CustomField>