force-app/main/default/objects/Loading_Advice__c/fields/SubmittedOn_DKL__c.field-meta.xml
<CustomField>
    <fullName>SubmittedOn_DKL__c</fullName>
    <label>Submitted On</label>
    <type>DateTime</type>
</CustomField>