force-app/main/default/objects/Loading_Advice__c/fields/SupersededBy_DKL__c.field-meta.xml
<CustomField>
    <fullName>SupersededBy_DKL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superseded By</label>
    <referenceTo>Loading_Advice__c</referenceTo>
    <relationshipLabel>Loading Advices (Superseded By)</relationshipLabel>
    <relationshipName>Loading_Advices1</relationshipName>
    <type>Lookup</type>
</CustomField>