force-app/main/default/objects/Loading_Advice__c/fields/TruckPlateNo_DKL__c.field-meta.xml
<CustomField>
    <fullName>TruckPlateNo_DKL__c</fullName>
    <label>Truck Plate No</label>
    <length>8</length>
    <type>Text</type>
</CustomField>