force-app/main/default/objects/Loading_Advice__c/fields/VersionNumber_DKL__c.field-meta.xml
<CustomField>
    <fullName>VersionNumber_DKL__c</fullName>
    <label>Version Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>