force-app/main/default/objects/Loading_Advice__c/fields/WaybillNumber_DKL__c.field-meta.xml
<CustomField>
    <fullName>WaybillNumber_DKL__c</fullName>
    <label>Waybill Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>