force-app/main/default/objects/Loading_Advice__c/fields/X1ApprovedBy_DKL__c.field-meta.xml
<CustomField>
    <fullName>X1ApprovedBy_DKL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>1st Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FirstStageApprovals</relationshipName>
    <type>Lookup</type>
</CustomField>