force-app/main/default/objects/Loading_Advice__c/fields/X1stApprovedOn_DKL__c.field-meta.xml
<CustomField>
    <fullName>X1stApprovedOn_DKL__c</fullName>
    <label>1st Approved On</label>
    <type>DateTime</type>
</CustomField>