force-app/main/default/objects/Loading_Advice__c/fields/X2ndApprovedBy_DKL__c.field-meta.xml
<CustomField>
    <fullName>X2ndApprovedBy_DKL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2nd Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SubmittedLA</relationshipName>
    <type>Lookup</type>
</CustomField>