force-app/main/default/objects/Loading_Advice__c/fields/X2ndApprovedOn_DKL__c.field-meta.xml
<CustomField>
    <fullName>X2ndApprovedOn_DKL__c</fullName>
    <label>2nd Approved On</label>
    <type>DateTime</type>
</CustomField>