force-app/main/default/objects/Loading_Advice__c/recordTypes/Commercial_DKL.recordType-meta.xml
<RecordType>
    <fullName>Commercial_DKL</fullName>
    <active>true</active>
    <description>Used for customer-facing loading operations involving pricing, invoicing, and revenue generation.</description>
    <label>Commercial</label>
</RecordType>