force-app/main/default/objects/Loading_Advice__c/recordTypes/StockTransfer_DKL.recordType-meta.xml
<RecordType>
    <fullName>StockTransfer_DKL</fullName>
    <active>true</active>
    <description>Used for internal movement of stock between locations without pricing or revenue impact.</description>
    <label>Stock Transfer</label>
</RecordType>