force-app/main/default/objects/Loading_Advice__c/validationRules/Lock_When_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_When_Approved</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  NOT(ISNEW()),
  $Profile.Name = &quot;Gradient Sales Team&quot;,
  NOT(ISCHANGED(Approval_Status_DKL__c))
)</errorConditionFormula>
    <errorMessage>This Loading Advice is locked from further edits.</errorMessage>
</ValidationRule>