force-app/main/default/objects/Loading_Advice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approval_Status_DKL__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>CurrentApprover_DKL__c</columns>
    <columns>SubmittedOn_DKL__c</columns>
    <columns>Status_DKL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>