force-app/main/default/objects/Loading_Advice__c/listViews/ApprovedLoadingAdvices_DKL.listView-meta.xml
<ListView>
    <fullName>ApprovedLoadingAdvices_DKL</fullName>
    <columns>NAME</columns>
    <columns>Account_DKL__c</columns>
    <columns>Approval_Status_DKL__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LogisticsEmailSent_DKL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status_DKL__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Loading Advice</label>
</ListView>