force-app/main/default/objects/Loading_Advice__c/listViews/DivertedLoadingAdvices_DKL.listView-meta.xml
<ListView>
    <fullName>DivertedLoadingAdvices_DKL</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_DKL__c</field>
        <operation>equals</operation>
        <value>Diverted</value>
    </filters>
    <label>Diverted Loading Advices</label>
</ListView>