force-app/main/default/objects/Loading_Advice__c/listViews/LoadingAdvicePendingApproval_DKL.listView-meta.xml
<ListView>
    <fullName>LoadingAdvicePendingApproval_DKL</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Approval_Status_DKL__c</field>
        <operation>equals</operation>
        <value>Pending 1st Approver,Pending 2nd Approver,Pending 3rd Approver</value>
    </filters>
    <label>Loading Advice Pending Approval</label>
</ListView>