force-app/main/default/objects/Loading_Advice__c/listViews/Pending1stApprover_DKL.listView-meta.xml
<ListView>
    <fullName>Pending1stApprover_DKL</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status_DKL__c</field>
        <operation>equals</operation>
        <value>Pending 1st Approver</value>
    </filters>
    <label>Pending 1st Approver</label>
</ListView>