force-app/main/default/objects/Loading_Advice__c/listViews/Pending3rdApprover_DKL.listView-meta.xml
<ListView>
    <fullName>Pending3rdApprover_DKL</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status_DKL__c</field>
        <operation>equals</operation>
        <value>Pending 3rd Approver</value>
    </filters>
    <label>Pending 3rd Approver</label>
</ListView>