force-app/main/default/objects/Loading_Advice__c/listViews/RejectedLoadingAdvices_DKL.listView-meta.xml
<ListView>
    <fullName>RejectedLoadingAdvices_DKL</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status_DKL__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected Loading Advices</label>
</ListView>