force-app/main/default/objects/Loading_Advice__c/listViews/SentLoadingAdvices_DKL.listView-meta.xml
<ListView>
    <fullName>SentLoadingAdvices_DKL</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LogisticsEmailSent_DKL__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Dispatched Loading Advice</label>
</ListView>