force-app/main/default/objects/Loading_Advice__c/listViews/TodaysLoadingAdvices_DKL.listView-meta.xml
<ListView>
    <fullName>TodaysLoadingAdvices_DKL</fullName>
    <columns>NAME</columns>
    <columns>ProductFamily_DKL__c</columns>
    <columns>Approval_Status_DKL__c</columns>
    <columns>LogisticsEmailSent_DKL__c</columns>
    <columns>Status_DKL__c</columns>
    <columns>Submittedby_DKL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Loading Advice</label>
</ListView>